# limoeiro

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_db  README.md  Untitled.ipynb  alembic.ini  babel.cfg  pyproject.toml  requirements.txt  start.sh  worker.py
alembic/: env.py
alembic/versions/: 04349a255f76_search_optimization.py  08df8fb569fc_review_attributes.py  101ed9a4395d_change_scheduling_type.py  1a0c723a8420_increase_role_description_limit.py  22eded041a40_add_more_provider_types.py  342d16d3bbe5_add_columns.py  8ad761f8d88b_add_role_and_permission.py  91dccfefd405_sql_server_data_types.py  9298cefbb831_create_scheduler_columns.py  a0e748bf1825_add_new_columns_to_ingestion_for_.py  cc76a21e7a52_cron_expression.py  ceca30ce6e89_unique.py  d78983e7e563_initial_version.py  e28787a3c49f_initial_version.py  ea577de8fb62_search_colum.py  f2d8ddc8ad77_initial_version.py  f4912149588a_add_ingestion_execution.py  f7631ccc6a29_initial_data.py
app/:  util import slugify  Untitled.ipynb  database.py  exceptions.py  main.py  models.py  schemas.py  worker.py
app/collector/: __init__.py  collector.py  collector_factory.py  data_collection_diff_checker.py  data_collection_engine.py  data_collection_logging.py  data_collection_scheduling engine.py  data_collection_scheduling_engine.py  druid_collector.py  elasticsearch_collector.py  hdfs_collector.py  hive_collector.py  mariadb_collector.py  mongo_collector.py  mssql_collector.py  oracle_collector.py  postgres_collector.py  postgresql_collector.py  runner.py  sql_alchemy_collector.py
app/routers/: .database_table_router.py.swp  __init__.py  a_i_model_router.py  asset_router.py  collector_router.py  company_router.py  contact_router.py  database_provider_connection_router.py  database_provider_ingestion_execution_router.py  database_provider_ingestion_log_router.py  database_provider_ingestion_router.py  database_provider_ingestion_start_router.py  database_provider_router.py  database_provider_type_router.py  database_router.py  database_schema_router.py  database_table_router.py  database_table_sample_router.py  domain_router.py  foo.py  i_a_model_router.py  layer_router.py  (+7 more)
(+89 files in other folders)
