[project]
name = "limoeiro"
version = "0.1.0"
description = "Metadata catalog service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "fastapi==0.115.4",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "python_dotenv==1.0.1",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "anyio>=4.8.0",
]
