[project]
name = "limoeiro"
version = "0.1.0"
description = "Metadata catalog service"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "fastapi==0.115.4",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "python_dotenv==1.0.1",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "anyio>=4.8.0",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "alembic>=1.14.0",
    "psycopg2>=2.9.10",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "uvicorn>=0.34.0",
]
